2001-06-12  Akim Demaille  <akim@epita.fr>

	* autoscan.in (%kind_comment): New.
	(output_kind): New.
	(output_functions, output_identifiers, output_headers): Use it.

2001-06-12  Akim Demaille  <akim@epita.fr>

	* autoscan.in (&print_unique): Take `$kind' and `$word' as
	arguments, to factor indirections into `%macro' and `%used'.
	(%generic_macro): Fix a typo.

2001-06-12  Akim Demaille  <akim@epita.fr>

	* aclibraries: New.
	* autoscan.in (@kinds): Add `libraries'.
	Use `@kinds' instead of hard coded lists.
	(%programs, %headers, %identifiers, %makevars, %libraries, %functions):
	Remove, replaced by...
	(%used): this.

2001-06-12  Akim Demaille  <akim@epita.fr>

	* autoscan.in (%functions_macros %headers_macros)
	(%identifiers_macros %programs_macros %makevars_macros): Remove,
	replaced by...
	(%macro): New.

2001-06-11  Raja R Harinath  <harinath@cs.umn.edu>

	* aclang.m4 (AC_NO_EXECUTABLES): Override
	_AC_COMPILER_EXEEXT_WORKS, not _AC_LANG_COMPILER_WORKS.

2001-06-11  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_NO_EXECUTABLES): Define the macros with their
	trailing new line.
	Reported by Andreas Schwab.

2001-06-11  Akim Demaille  <akim@epita.fr>

	* Makefile.am, Makefile.maint: Typos.

2001-06-09  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Here-Documents): New section, gathering
	documentation about here-documents.
	Use `href', not `uref', and other changes.

2001-06-09  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Portable Shell Programming): Promoted as a
	chapter.

2001-06-09  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Builtins): Complete the
	description of the here-docs penalties with Alexandre Oliva's
	explanations.

2001-06-01  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi: Talk about here documents and speedups.
	Do not use "echo" on arbitrary strings.
	Spell "here-documents" consistently with the standard.

2001-06-09  Akim Demaille  <akim@epita.fr>
